--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:20px; left:50%; transform:translateX(-50%); color:#fff; background:rgba(0,0,0,0.7); padding:12px 40px; border-radius:40px; font-size:18px; pointer-events:none; z-index:100; }
     #finalImage { position:fixed; inset:0; background:#000; display:none; align-items:center; justify-content:center; z-index:998; }
-    #finalImage img { max-width:100vw; max-height:100vh; object-fit:contain; }
+    #finalImage img { width:100vw; height:100vh; object-fit:contain; } /* ĐÃ SỬA FULL MÀN HÌNH */
     #gift { position:absolute; bottom:80px; left:50%; transform:translateX(-50%) scale(0); width:220px; cursor:pointer; z-index:99; transition:transform 1.2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
     #merry { position:fixed; inset:0; color:#ff3366; font-size:90px; font-weight:bold; display:flex; align-items:center; justify-content:center; flex-direction:column; opacity:0; pointer-events:none; z-index:999; text-shadow:0 0 60px #ff0066; transition:opacity 3s; }
     #merry span { font-size:60px; color:#00ffff; margin-top:30px; text-shadow:0 0 40px cyan; }
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="info">Chạm vào quả cầu <span id="count">0</span>/3 lần...</div>
-  <div id="finalImage"><img src="image.jpg"></div>
+  <div id="finalImage"><img src="image.jpg" alt="Bí mật Giáng sinh"></div>
   <img id="gift" src="https://i.imgur.com/2lYh1oO.png">
   <div id="merry">MERRY CHRISTMAS 2025!<br><span>Chúc bạn một năm mới thật hạnh phúc!</span></div>
 
@@ -82,21 +82,23 @@
 
     // Nhà gỗ
     const house = new THREE.Group();
-    house.add(new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513})));
+    const houseBody = new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513}));
     const roof = new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222}));
-    roof.position.y = 47; roof.rotation.y = Math.PI/4; house.add(roof);
-    house.position.set(-20,-55,-15); inside.add(house);
+    roof.position.y = 47; roof.rotation.y = Math.PI/4;
+    house.add(houseBody); house.add(roof);
+    house.position.set(-20,-55,-15);
+    inside.add(house);
 
     // Người tuyết
     const snowman = new THREE.Group();
-    snowman.add(new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})));
+    const body = new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})); snowman.add(body);
     const mid = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); mid.position.y=25; snowman.add(mid);
     const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})); head.position.y=43; snowman.add(head);
     const hat = new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000})); hat.position.y=52; snowman.add(hat);
     const scarf = new THREE.Mesh(new THREE.BoxGeometry(26,6,14), new THREE.MeshStandardMaterial({color:0xff0000})); scarf.position.set(0,34,11); snowman.add(scarf);
     snowman.position.set(40,-62,10); inside.add(snowman);
 
-    // 4 cây thông – ĐÃ SỬA HOÀN TOÀN
+    // 4 cây thông – ĐÃ SỬA TRIỆT ĐỂ
     for(let i=0; i<4; i++){
       const tree = new THREE.Group();
       const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,24), new THREE.MeshStandardMaterial({color:0x654321}));
@@ -111,7 +113,7 @@
       inside.add(tree);
     }
 
-    // Tuyết rơi – ĐÃ SỬA LỖI "postura"
+    // Tuyết rơi
     const snowCount = 7000;
     const posArray = new Float32Array(snowCount * 3);
     for(let i = 0; i < snowCount * 3; i += 3){
@@ -121,10 +123,7 @@
     }
     const snowGeometry = new THREE.BufferGeometry();
     snowGeometry.setAttribute('position', new THREE.BufferAttribute(posArray, 3));
-    const snow = new THREE.Points(
-      snowGeometry,
-      new THREE.PointsMaterial({color:0xffffff, size:5.5, transparent:true, opacity:0.92, blending:THREE.AdditiveBlending})
-    );
+    const snow = new THREE.Points(snowGeometry, new THREE.PointsMaterial({color:0xffffff,size:5.5,transparent:true,opacity:0.92,blending:THREE.AdditiveBlending}));
     globe.add(snow);
 
     scene.add(new THREE.AmbientLight(0xffffff,0.8));
@@ -162,6 +161,7 @@
       isExploded = true;
       document.getElementById('info').style.opacity = 0;
 
+      // Mảnh kính vỡ
       for(let i=0; i<280; i++){
         const f = new THREE.Mesh(
           new THREE.PlaneGeometry(6+Math.random()*18, 6+Math.random()*18),
@@ -175,17 +175,39 @@
       }
       globe.visible = false;
 
+      // Reset tuyết
       const pos = snow.geometry.attributes.position.array;
       for(let i=1; i<pos.length; i+=3) pos[i] = 180 + Math.random()*150;
       snow.geometry.attributes.position.needsUpdate = true;
 
-      setTimeout(()=>{ document.getElementById('finalImage').style.display = 'flex'; new Audio('music.mp3').play().catch(()=>{}); },1800);
-      setTimeout(()=>{ document.getElementById('gift').style.transform = 'translateX(-50%) scale(1)'; },4000);
+      // Hiện ảnh + nhạc
+      setTimeout(()=>{
+        document.getElementById('finalImage').style.display = 'flex';
+        new Audio('music.mp3').play().catch(()=>{});
+      },1800);
+
+      // HIỆN HỘP QUÀ SAU 4 GIÂY – ĐÃ SỬA ĐÚNG 100%
+      setTimeout(()=>{
+        const gift = document.getElementById('gift');
+        gift.style.transform = 'translateX(-50%) scale(1)';
+      },4000);
     }
 
+    // Hộp quà – bấm 3 lần
     const giftBox = document.getElementById('gift');
-    giftBox.addEventListener('click', ()=>{ if(giftClicks<3){ giftClicks++; giftBox.style.transform='translateX(-50%) scale(1.3)'; setTimeout(()=>giftBox.style.transform='translateX(-50%) scale(1)',200); if(giftClicks===3) setTimeout(openGift,800); }});
-    giftBox.addEventListener('touchstart', e=>{e.preventDefault(); giftBox.click();});
+    giftBox.addEventListener('click', handleGiftClick);
+    giftBox.addEventListener('touchstart', e=>{e.preventDefault(); handleGiftClick();});
+
+    function handleGiftClick(){
+      if(giftClicks < 3){
+        giftClicks++;
+        giftBox.style.transform = 'translateX(-50%) scale(1.3)';
+        setTimeout(()=>giftBox.style.transform='translateX(-50%) scale(1)',200);
+        if(giftClicks===3){
+          setTimeout(openGift,800);
+        }
+      }
+    }
 
     function openGift(){
       giftBox.style.opacity = 0;
