--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
     import * as THREE from 'three';
     import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-    // ==== CƠ BẢN ====
     const scene = new THREE.Scene();
     scene.background = new THREE.Color(0x000814);
+
     const camera = new THREE.PerspectiveCamera(50, innerWidth/innerHeight, 0.1, 2000);
     camera.position.z = 380;
+
     const renderer = new THREE.WebGLRenderer({antialias:true});
     renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
+
     const controls = new OrbitControls(camera, renderer.domElement);
-    controls.enableDamping = true; controls.enablePan = false;
+    controls.enableDamping = true;
+    controls.enablePan = false;
 
     const globe = new THREE.Group();
     scene.add(globe);
@@ -58,10 +61,10 @@
     // Đế + ribbon + nhãn
     const base = new THREE.Mesh(new THREE.CylinderGeometry(84,94,64,64), new THREE.MeshStandardMaterial({color:0x8b4513}));
     base.position.y = -150; globe.add(base);
+
     const ribbon = new THREE.Mesh(new THREE.RingGeometry(82,94,64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide}));
     ribbon.rotation.x = -Math.PI/2; ribbon.position.y = -125; globe.add(ribbon);
 
-    // Nhãn Christmas
     const canvas = document.createElement('canvas'); canvas.width=512; canvas.height=128;
     const ctx = canvas.getContext('2d');
     ctx.fillStyle = '#ffd700'; ctx.fillRect(0,0,512,128);
@@ -73,42 +76,48 @@
 
     const inside = new THREE.Group(); globe.add(inside);
 
-    // Đất tuyết
-    inside.add(new THREE.Mesh(new THREE.CircleGeometry(114,64), new THREE.MeshStandardMaterial({color:0xf8faff}))
-      .rotateX(-Math.PI/2).setPosition(0,-80,0));
+    // Đất tuyết – ĐÃ SỬA LỖI setPosition
+    const ground = new THREE.Mesh(new THREE.CircleGeometry(114,64), new THREE.MeshStandardMaterial({color:0xf8faff}));
+    ground.rotation.x = -Math.PI/2;
+    ground.position.y = -80;
+    inside.add(ground);
 
-    // Nhà, người tuyết, cây thông – ĐÃ KIỂM TRA 100% KHÔNG LỖI Vector3
-    // (đã viết gọn và chắc chắn chỉ add Mesh/Group)
+    // Nhà gỗ
     const house = new THREE.Group();
     house.add(new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513})));
-    house.add(new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222}))
-      .setPosition(0,47,0).rotateY(Math.PI/4));
-    house.position.set(-20,-55,-15); inside.add(house);
+    const roof = new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222}));
+    roof.position.y = 47; roof.rotation.y = Math.PI/4;
+    house.add(roof);
+    house.position.set(-20,-55,-15);
+    inside.add(house);
 
+    // Người tuyết
     const snowman = new THREE.Group();
     snowman.add(new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})));
-    snowman.add(new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})).setPosition(0,25,0));
-    snowman.add(new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})).setPosition(0,43,0));
-    snowman.add(new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000})).setPosition(0,52,0));
-    snowman.add(new THREE.Mesh(new THREE.BoxGeometry(26,6,14), new THREE.MeshStandardMaterial({color:0xff0000})).setPosition(0,34,11));
+    const mid = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); mid.position.y = 25; snowman.add(mid);
+    const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})); head.position.y = 43; snowman.add(head);
+    const hat = new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000})); hat.position.y = 52; snowman.add(hat);
+    const scarf = new THREE.Mesh(new THREE.BoxGeometry(26,6,14), new THREE.MeshStandardMaterial({color:0xff0000})); scarf.position.set(0,34,11); snowman.add(scarf);
     snowman.position.set(40,-62,10); inside.add(snowman);
 
-    for(let i=0;i<4;i++){
+    // 4 cây thông – ĐÃ DÙNG scale.setScalar() ĐÚNG CÁCH
+    for(let i=0; i<4; i++){
       const tree = new THREE.Group();
       const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,24), new THREE.MeshStandardMaterial({color:0x654321}));
       const leaves = new THREE.Mesh(new THREE.ConeGeometry(30,60,12), new THREE.MeshStandardMaterial({color:0x0f5132}));
       leaves.position.y = 42;
-      tree.add(trunk); tree.add(leaves);
-      tree.position.set(-70+i*50, -64, -40-Math.random()*30);
-      tree.scale.setScalar(0.6+Math.random()*0.5);
-      tree.rotation.y = Math.random()*Math.PI;
+      tree.add(trunk);
+      tree.add(leaves);
+      tree.position.set(-70 + i*50, -64, -40 - Math.random()*30);
+      tree.scale.setScalar(0.6 + Math.random()*0.5);  // ← ĐÚNG
+      tree.rotation.y = Math.random() * Math.PI;
       inside.add(tree);
     }
 
     // Tuyết rơi
     const snowCount = 7000;
     const posArray = new Float32Array(snowCount*3);
-    for(let i=0;i<snowCount*3;i+=3){
+    for(let i=0; i<snowCount*3; i+=3){
       posArray[i]   = THREE.MathUtils.randFloatSpread(250);
       posArray[i+1] = 200 + Math.random()*100;
       posArray[i+2] = THREE.MathUtils.randFloatSpread(250);
@@ -136,21 +145,21 @@
       mouse.x = (x/innerWidth)*2-1;
       mouse.y = -(y/innerHeight)*2+1;
       raycaster.setFromCamera(mouse,camera);
-      if(raycaster.intersectObject(glass).length>0){
+      if(raycaster.intersectObject(glass).length > 0){
         shake = 1;
         snow.material.size = 9;
         setTimeout(()=>snow.material.size=5.5,800);
         clickCount++;
         countDisplay.textContent = clickCount;
         if(clickCount === 3){
-          // BƯỚC XOAY TĂNG TỐC RÕ RỆT TRƯỚC KHI NỔ
+          // XOAY TĂNG TỐC RÕ RỆT TRƯỚC KHI NỔ
           const accel = setInterval(()=>{
-            spinSpeed += 0.25;
-            if(spinSpeed >= 6){
+            spinSpeed += 0.28;
+            if(spinSpeed >= 6.5){
               clearInterval(accel);
-              setTimeout(explodeGlobe, 400); // chờ chút cho đẹp
+              setTimeout(explodeGlobe, 500);
             }
-          }, 120);
+          }, 100);
         }
       }
     }
@@ -161,8 +170,7 @@
       isExploded = true;
       document.getElementById('info').style.opacity = 0;
 
-      // Mảnh kính vỡ
-      for(let i=0;i<280;i++){
+      for(let i=0; i<280; i++){
         const f = new THREE.Mesh(
           new THREE.PlaneGeometry(6+Math.random()*18,6+Math.random()*18),
           new THREE.MeshPhysicalMaterial({color:0xffffff,metalness:0.95,roughness:0.05,transmission:0.98,thickness:5,transparent:true,opacity:0.9})
@@ -175,9 +183,8 @@
       }
       globe.visible = false;
 
-      // Reset tuyết
       const pos = snow.geometry.attributes.position.array;
-      for(let i=1;i<pos.length;i+=3) pos[i] = 180 + Math.random()*150;
+      for(let i=1; i<pos.length; i+=3) pos[i] = 180 + Math.random()*150;
       snow.geometry.attributes.position.needsUpdate = true;
 
       setTimeout(()=>{ 
@@ -185,7 +192,6 @@
         new Audio('music.mp3').play().catch(()=>{});
       },1800);
 
-      // HIỆN HỘP QUÀ SAU 4 GIÂY – ĐÃ SỬA ĐÚNG 100%
       setTimeout(()=>{
         const gift = document.getElementById('gift');
         gift.style.opacity = 1;
@@ -193,9 +199,15 @@
       },4000);
     }
 
-    // Hộp quà – chỉ hoạt động sau khi quả cầu nổ
     const giftBox = document.getElementById('gift');
-    giftBox.addEventListener('click', ()=>{ if(isExploded && giftClicks<3){ giftClicks++; giftBox.style.transform='translateX(-50%) scale(1.3)'; setTimeout(()=>giftBox.style.transform='translateX(-50%) scale(1)',200); if(giftClicks===3) setTimeout(openGift,800); }});
+    giftBox.addEventListener('click', ()=>{ 
+      if(isExploded && giftClicks < 3){ 
+        giftClicks++; 
+        giftBox.style.transform = 'translateX(-50%) scale(1.3)'; 
+        setTimeout(()=>giftBox.style.transform='translateX(-50%) scale(1)',200); 
+        if(giftClicks===3) setTimeout(openGift,800); 
+      }
+    });
     giftBox.addEventListener('touchstart', e=>{e.preventDefault(); giftBox.click();});
 
     function openGift(){
@@ -218,19 +230,18 @@
       },30);
     }
 
-    // ANIMATE
     function animate(){
       requestAnimationFrame(animate);
       globe.rotation.y += 0.004 + spinSpeed;
 
-      if(shake>0.01){
+      if(shake > 0.01){
         globe.rotation.y += Math.sin(performance.now()*0.03)*0.05*shake;
         globe.rotation.x += Math.sin(performance.now()*0.022)*0.04*shake;
         shake *= 0.93;
       }
 
       const pos = snow.geometry.attributes.position.array;
-      for(let i=1;i<pos.length;i+=3){
+      for(let i=1; i<pos.length; i+=3){
         pos[i] -= 0.9 + spinSpeed*7 + shake*5;
         if(pos[i] < -200) pos[i] += 500;
       }
@@ -244,7 +255,7 @@
           f.rotation.z += f.userData.rot.z*0.04;
           f.userData.vel.y -= 0.5;
           f.material.opacity *= 0.98;
-          if(f.material.opacity<0.02) scene.remove(f);
+          if(f.material.opacity < 0.02) scene.remove(f);
         });
       }
 
