--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Quả Cầu Tuyết Giáng Sinh 2025 – HOÀN HẢO 100%</title>
+  <link rel="icon" href="data:,">
   <style>
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:20px; left:50%; transform:translateX(-50%); color:#fff; background:rgba(0,0,0,0.7); padding:12px 40px; border-radius:40px; font-size:18px; pointer-events:none; z-index:100; }
