--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     );
     globe.add(glass);
 
-    // Đế + ribbon + nhãn + cảnh bên trong (giữ nguyên như cũ)
+    // (Tất cả phần đế, nhà, người tuyết, cây thông... giữ nguyên như bản trước)
     const base = new THREE.Mesh(new THREE.CylinderGeometry(84,94,64,64), new THREE.MeshStandardMaterial({color:0x8b4513}));
     base.position.y = -150; globe.add(base);
     const ribbon = new THREE.Mesh(new THREE.RingGeometry(82,94,64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide}));
@@ -78,7 +78,6 @@
     const ground = new THREE.Mesh(new THREE.CircleGeometry(114,64), new THREE.MeshStandardMaterial({color:0xf8faff}));
     ground.rotation.x = -Math.PI/2; ground.position.y = -80; inside.add(ground);
 
-    // Nhà, người tuyết, cây thông (giữ nguyên)
     const house = new THREE.Group();
     house.add(new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513})));
     const roof = new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222}));
@@ -105,7 +104,6 @@
       inside.add(tree);
     }
 
-    // Tuyết rơi
     const snowCount = 7000;
     const posArray = new Float32Array(snowCount*3);
     for(let i=0; i<snowCount*3; i+=3){
@@ -124,7 +122,7 @@
     dirLight.position.set(120, 250, 100);
     scene.add(dirLight);
 
-    // ==================== HỘP QUÀ 3D – TO X1.5, ĐẸP HOÀN HẢO ====================
+    // ==================== HỘP QUÀ 3D X1.5 – LẮC THẬT MẠNH + NẮP BAY TỪ TỪ ====================
     const giftGroup = new THREE.Group();
     giftGroup.position.set(0, -100, 0);
     giftGroup.scale.set(0.01, 0.01, 0.01);
@@ -152,7 +150,6 @@
     giftLight.position.set(0, 0, 0);
     giftGroup.add(giftLight);
 
-    // ==================== BIẾN & HIỆU ỨNG ====================
     let clickCount = 0, spinSpeed = 0, shake = 0, isExploded = false, giftClicks = 0;
     const countDisplay = document.getElementById('count');
     const fragments = [];
@@ -175,14 +172,13 @@
         countDisplay.textContent = clickCount;
 
         if(clickCount === 3){
-          // XOAY ĐIÊN CUỒNG TRƯỚC KHI NỔ
           let crazy = 0;
           const spinInt = setInterval(() => {
-            crazy += 0.45;
+            crazy += 0.5;
             spinSpeed = crazy;
-            if(crazy > 20){
+            if(crazy > 22){
               clearInterval(spinInt);
-              setTimeout(explodeGlobe, 700);
+              setTimeout(explodeGlobe, 800);
             }
           }, 70);
         }
@@ -206,7 +202,6 @@
       }
       globe.visible = false;
 
-      // Hiện ảnh full 3.5s
       setTimeout(() => {
         const img = document.getElementById('finalImage');
         img.style.display = 'flex';
@@ -214,17 +209,33 @@
         new Audio('music.mp3').play().catch(()=>{});
       }, 1800);
 
-      // Ẩn ảnh → hiện hộp quà x1.5
       setTimeout(() => {
         document.getElementById('finalImage').style.opacity = 0;
         setTimeout(() => {
           document.getElementById('finalImage').style.display = 'none';
-          giftGroup.scale.set(1.5, 1.5, 1.5); // ← TO X1.5 ĐẸP NHẤT
+          giftGroup.scale.set(1.5, 1.5, 1.5);
         }, 2000);
       }, 1800 + 3500);
     }
 
-    // Bấm hộp quà
+    // LẮC HỘP QUÀ THẬT MẠNH (giống lắc quà thật)
+    function shakeGift() {
+      const intensity = 0.3;
+      let time = 0;
+      const shakeInterval = setInterval(() => {
+        time += 0.15;
+        giftGroup.rotation.x = Math.sin(time * 10) * intensity;
+        giftGroup.rotation.z = Math.cos(time * 12) * intensity;
+        giftGroup.position.x = Math.sin(time * 8) * 15;
+        giftGroup.position.y = -100 + Math.abs(Math.sin(time * 15)) * 20;
+        if (time > 4) {
+          clearInterval(shakeInterval);
+          giftGroup.rotation.set(0, giftGroup.rotation.y, 0);
+          giftGroup.position.set(0, -100, 0);
+        }
+      }, 16);
+    }
+
     renderer.domElement.addEventListener('click', (e) => {
       if(giftClicks >= 3 || giftGroup.scale.x < 1) return;
       mouse.x = (e.clientX / innerWidth) * 2 - 1;
@@ -232,28 +243,32 @@
       raycaster.setFromCamera(mouse, camera);
       if(raycaster.intersectObject(giftBody).length > 0 || raycaster.intersectObject(giftLid).length > 0){
         giftClicks++;
-        giftGroup.rotation.y += 0.35;
-        giftLight.intensity = giftClicks * 6;
-        giftGroup.position.y += 30;
-        setTimeout(() => giftGroup.position.y -= 30, 400);
-        if(giftClicks === 3) setTimeout(openGift, 1200);
+        giftLight.intensity = giftClicks * 7;
+        shakeGift(); // ← LẮC THẬT ĐÃ
+        if(giftClicks === 3) setTimeout(openGift, 1400);
       }
     });
 
-    // MỞ QUÀ – NẮP BAY CHẬM, ĐẸP, NHÌN RÕ
+    // NẮP BAY TỪ TỪ + XOAY ĐẸP
     function openGift(){
       new Audio('music2.mp3').play().catch(()=>{});
-      giftLight.intensity = 40;
+      giftLight.intensity = 50;
 
-      // Nắp bay chậm + xoay đẹp
-      giftLid.position.y += 180;
-      giftLid.rotation.x = Math.PI * 3;
-      giftLid.rotation.z = Math.PI * 2;
-
-      setTimeout(() => {
-        giftGroup.visible = false;
-        document.getElementById('merry').classList.add('active');
-      }, 2800);
+      // Bay lên từ từ 3 giây + xoay chậm
+      let progress = 0;
+      const flyUp = setInterval(() => {
+        progress += 0.015;
+        giftLid.position.y = 75 + progress * 400;
+        giftLid.rotation.x += 0.02;
+        giftLid.rotation.z += 0.015;
+        if (progress >= 1) {
+          clearInterval(flyUp);
+          setTimeout(() => {
+            giftGroup.visible = false;
+            document.getElementById('merry').classList.add('active');
+          }, 800);
+        }
+      }, 16);
     }
 
     function animate(){
